@@ -1,3 +1,8 @@
+2010-01-04  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-bzr.el (vc-bzr-state-heuristic): Make it work for lightweight
+	checkouts.  (Bug#618)
+
 2010-01-02  Chong Yidong  <cyd@stupidchicken.com>
 
 	* net/browse-url.el (browse-url-encode-url): Don't escape commas.
